--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block title %}<title>Humorer | Home</title>{% endblock %}
+{% block meta_description %}
+    Explore a collection of light-hearted jokes and daring dark humor on our web page. Discover witty quips that tickle your funny bone, alongside edgier jokes that push the boundaries. Brace yourself for a rollercoaster of emotions as you navigate the contrast between laughter and shadows.
+{% endblock %}
 {% load static %}
 {% block content %}
 <style>
