--- a/app/templates/memes.html
+++ b/app/templates/memes.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
+{% block title %}<title>Humorer | Memes</title>{% endblock %}
+{% block meta_description %}
+    Dive into a world of laughter with our hilarious meme collection. From relatable humor to the absurdly funny, explore a variety of memes that will have you rolling on the floor. Get ready to lighten your mood and brighten your day!
+{% endblock %}
     {% block content %}
     <div id="home2" class="bgImage" >
-      <h1 style="text-align: center; color: yellow; margin: 10%;">A day without memes is full of stress, depression and hypertension. Laugh to live! <i class="fas fa-laugh    "></i>
+      <h1 style="text-align: center; color: yellow; margin: 10%;">A day without memes is full of tension, depression and hypertension. Laugh to live! <i class="fas fa-laugh    "></i>
     </div>
 
     {% if memes %}
