--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block title %}<title>Humorer | Shorts</title>{% endblock %}
+{% block meta_description %}
+    Get ready to laugh your heart out with our hilarious collection of funny videos. From side-splitting pranks to heartwarming comedic moments, our videos are sure to brighten up your day. Explore a diverse range of content that guarantees non-stop entertainment!
+{% endblock %}
     {% block content %}
     <div id="home2" class="bgImage" >
       <h1 style="text-align: center; color: yellow;margin: 10%;">Laughter will always be the best medicine. Have you had your shot today?<i class="fas fa-laugh    "></i>
