--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title> Humorer | Login </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -93,21 +93,6 @@
             color: #C8CDDF;
             }
 
-
-            @media(max-width: 458px) {
-            
-            body {
-                margin: 0 18px;
-            }
-            
-            form {
-                background: #f9faff;
-                border: none;
-                box-shadow: none;
-                padding: 20px 0;
-            }
-
-            }
         </style>
         <script type="text/javascript" src="{% static 'index.js' %}"></script>
         <script type="text/javascript">
