--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends "email_index.html" %}
+{% block title %}<title>Humorer | Password reset</title>{% endblock %}
 
 {% block content %}
  <!-- <form action="" method="post">
