--- a/app/templates/earn.html
+++ b/app/templates/earn.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}<title>Humorer | Earn</title>{% endblock %}
 {% load static %}
   {% block content %}
   <style>
