--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -168,7 +168,7 @@
         <br>
         <span>Contact us: 
           <br>
-          <i class="fa fa-envelope"></i> <a href="mailto:info.humorer@gmail.com">Send email</a>
+          <i class="fa fa-envelope"></i> <a href="mailto:support@humorer.online">Send email</a>
           <br>
           <i class="fa fa-phone"></i> <a href="tel:+254717102096">+254 717102096</a>
         </span>
