--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -56,7 +56,7 @@
           </button>
       </form>
       {% else %}
-      <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}">Log in to like this item!</a><br>
+      <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}"><i class="fa fa-thumbs-up"></i></a><br>
       {% endif %}
  
       
