--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -33,7 +33,7 @@
                 </button>
             </form>
             {% else %}
-            <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}">Log in to like this item!</a><br>
+            <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}"><i class="fa fa-thumbs-up"></i></a><br>
             {% endif %}
           
          
